# credit-advisor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  hacs.json  jules-p1-1.md  pyproject.toml  renovate.json  requirements-dev.txt
.github/workflows/: lint.yml
custom_components/credit_advisor/: __init__.py  card_registry.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml  strings.json
docs/: design.md  plan.md
